ODP_MODULES = buffer \
	      classification \
	      config \
	      cpumask \
	      crypto \
	      crypto_proto \
	      errno \
	      init \
	      queue \
	      packet \
	      pktio \
	      pool \
	      random \
	      scheduler \
	      synchronizers \
	      thread \
	      time \
	      timer \
	      shmem \
	      system

SUBDIRS = common $(ODP_MODULES)
